2009-06-06  Zoltan Varga  <vargaz@gmail.com>

	* CMakeLists.txt: CMake build file for libgc.

2009-05-18  Miguel de Icaza  <miguel@novell.com>

	* include/private/gcconfig.h: Add support for Linux on the PS3

2009-04-28  Zoltan Varga  <vargaz@gmail.com>

	* misc.c (GC_init): Avoid casting an lvalue. Fixes part of #498692.

2009-04-24  Kostyantyn Gushtin, Yevgen Kiruha, Serhiy Naumenko, Serhiy
Stetskovych and Ian Dichkovsky <mono@n-ix.com.ua>

	* include/private/gcconfig.h: Changes to support 64-bit ABI on MIPS.
	Add an additional condition for a proper defining of  ALIGNMENT
	and CPP_WORDSZ.

2009-04-10  Zoltan Varga  <vargaz@gmail.com>

	* include/private/gc_locks.h (GC_test_and_set): Merge a change from libgc
	7.1's libatomic-ops to fix the ppc build with gcc 4.4.

2009-02-23  Zoltan Varga  <vargaz@gmail.com>

	* os_dep.c (GC_init_linux_data_start): Avoid the call to GC_find_limit ()
	if GC_no_dls is TRUE, as it is not needed and it complicates debugging since
	it causes a SIGSEGV.

2009-01-18  Zoltan Varga  <vargaz@gmail.com>

	* include/private/gcconfig.h: Applied patch from Koushik Dutta
	(koush@koushikdutta.com). Define SEARCH_FOR_DATA_START for android.

2008-11-18  Mark Probst  <mark.probst@gmail.com>

	* include/private/gc_locks.h (test_and_set): The PPC64 case is
	wrong, as it operates on 64 bit values, not on 32 bit ones as the
	function requires.  The PPC32 case is sufficient.

2008-09-29  Geoff Norton  <gnorton@novell.com>

	* include/private/gcconfig.h: Make Darwin/ARM use mmap() instead of
	sbrk() for its allocator implementation.

2008-08-28  Geoff Norton  <gnorton@novell.com>

	* darwin_stop_world.c:
	* include/private/gcconfig.h: Add support for Darwin/ARM

2008-08-12  Geoff Norton  <gnorton@novell.com>

	* pthread_support.c: GCC shipped with SLES9 ppc gets confused with our current
	GC_setspecific define.  Unfold the define into a static inline on all platforms
	except ppc where it is a static leaf function.
